@@ -10,6 +10,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.util.StringUtils;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -35,15 +36,16 @@ public class UsersService {
             allDetails = usersMapper.getUserDetailsByFullName(fullName);
         } else {
             // 如果没有提供名称，返回空列表或所有用户（根据业务需求）
-            allDetails = List.of();
+            allDetails = Collections.emptyList();
+
         }
         
         // 手动分页
         int total = allDetails.size();
         int start = (page - 1) * size;
         int end = Math.min(start + size, total);
-        
-        List<UserDetailDTO> pagedList = start < total ? allDetails.subList(start, end) : List.of();
+
+        List<UserDetailDTO> pagedList = start < total ? allDetails.subList(start, end) : Collections.emptyList();
         
         // 合并相同用户的 phoneNumbers 和 addresses
         Map<Long, UserDetailDTO> userMap = pagedList.stream()
